--- a/app/views/users/places.slim
+++ b/app/views/users/places.slim
@@ -1,3 +1,8 @@
-h1.title Your Contributions
-h2.subtitle Collection of places you have submitted
-= render @places
+h1.title Your Places
+h2.subtitle Places you've submitted
+- if @places.empty?
+  = render 'no_places_yet'
+- else
+  - @places.each do |place|
+    = render place, presenter: Places::Presenter.new(place)
+== pagy_bulma_nav @pagy
