--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -5,7 +5,7 @@ h3.title.is-3 = full_name
     .container
       .card.user-account-card
         .card-image
-          figure.image.is-4by3
+          figure.image.is-square
             = image_tag user_avatar(current_user.avatar), alt: 'Profile picture'
         .card-content
           .media
