--- a/app/views/places/_profile_details.slim
+++ b/app/views/places/_profile_details.slim
@@ -1,8 +1,12 @@
   p.title.is-6 Mobile:&nbsp#{link_to place.mobile, "tel#{place.mobile}"}
   p.title.is-6 Landline:&nbsp#{link_to place.landline, "tel#{place.landline}"}
   p.title.is-6 Email:&nbsp#{mail_to place.email}
-  p.title.is-6 data-testid=:website Website:&nbsp#{link_to place.website, presenter.website_link}
-  p.title.is-6 data-testid=:facebook Facebook:&nbsp#{link_to place.facebook, presenter.facebook_link}
+  p.title.is-6 data-testid=:website
+    | Website:&nbsp
+    = link_to place.website, presenter.website_link, target: '_blank'
+  p.title.is-6 data-testid=:facebook
+    | Facebook:&nbsp
+    = link_to place.facebook, presenter.facebook_link, target: '_blank'
   p.title.is-6 data-testid=:instagram
     | Instagram:&nbsp
     span.has-text-primary #{place.instagram}
