🗑 Fix layout and UI elements

--- a/app/views/places/_profile_details.slim
+++ b/app/views/places/_profile_details.slim
@@ -1,5 +1,5 @@
-  p.title.is-6 Mobile:&nbsp#{link_to place.mobile, "tel#{place.mobile}"}
-  p.title.is-6 Landline:&nbsp#{link_to place.landline, "tel#{place.landline}"}
+  p.title.is-6 Mobile:&nbsp#{link_to place.mobile, "tel:#{place.mobile}"}
+  p.title.is-6 Landline:&nbsp#{link_to place.landline, "tel:#{place.landline}"}
   p.title.is-6 Email:&nbsp#{mail_to place.email}
   p.title.is-6 data-testid=:website
     | Website:&nbsp
