--- a/app/views/reviews/_review.slim
+++ b/app/views/reviews/_review.slim
@@ -25,6 +25,6 @@ article.mt-4
       h2.subtitle = review.headline
       .content = simple_format review.content
       small.is-size-7
-        | Reviewed on
+        | Reviewed on&nbsp
         time datetime="#{review.updated_at}"
           = review.updated_at.strftime('%B %d, %Y')
